Fix layout issue

--- a/src/styles/ProjectPage.module.css
+++ b/src/styles/ProjectPage.module.css
@@ -259,6 +259,7 @@ h1 {
 @media screen and (max-width: 600px) {
     .panel {
         flex-direction: column;
+        max-width: 80vw;
     }
     .copySection {
         width: auto;
@@ -286,6 +287,13 @@ h1 {
         max-width: 80vw;
         font-size: 10px;
     }
+    .codeSection {
+        max-width: 76vw;
+    }
+}
+
+.codeSection {
+    max-width: 76vw;
 }
 
 @media screen and (max-width: 1200px) {
@@ -316,6 +324,7 @@ h1 {
     border-radius: 8px;
     text-align: left;
     padding: 0.5rem;
+    max-width: 72vw;
 }
 
 .codeSection {
